Fix missing space in instructions.
Move styling of instructions to the SCSS file.

--- a/tx2-web/src/styles.scss
+++ b/tx2-web/src/styles.scss
@@ -60,3 +60,9 @@
     font-family: monospace;
     background-color: rgb(255, 255, 240);
 }
+
+.instructions {
+  color: black;
+  font-family: sans-serif;
+  padding: 0px;
+}
